enable kubernetes: - enable Deployment to bind with volume -> pvc - define pvc - define pv